--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,3 +1,3 @@
 cmake_minimum_required ( VERSION 3.10 )
 project( complejoMake )
-add_executable( ej1 main.h complex.h complex.cpp )
+add_executable( ej1 main.cpp complex.h complex.cpp )
